Spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -575,7 +575,7 @@ footer {
         text-align: inherit;
     }
     .right-col {
-        width: 50%;
+        width: 55%;
     }
     .hide-tab-larger {
         display: none;
